# octopus-demo-public

./: .gitignore  Dockerfile  README.md
.github/workflows/: build-image.yml
k8s/: myoctopusapp.yaml
myapp/: main.py  pyproject.toml
myapp/templates/: index.html
