[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["esnyder <es@example.com>"]
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
jinja2 = "^3.1.4"
prometheus-client = "^0.21.0"
pymongo = {extras = ["srv"], version = "^4.10.1"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
